fix: add global cors config